update post, add image

--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -128,7 +128,7 @@ clear_reading: true
 # Head title displayed at the top of the table of contents.
 toc_title: Table of Contents
 # Display thumbnail image of each post on index pages (false: disabled, true: enabled)
-thumbnail_image: true
+thumbnail_image: false
 # Message displayed after the <!-- more --> comment
 read_more_message: Continue reading
 # Message displayed after the <!-- more --> comment or after 300 characters for post with link layout
@@ -139,7 +139,7 @@ go_to_message: Go to the website
 # Current image is on Cloudinary.
 # Otherwise put your image in folder `source/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
 # and use relative url : `/assets/images/your-image.png`
-cover_image: https://lh3.googleusercontent.com/-TN1yV8p2ktw/VFgpN7eeUdI/AAAAAAAAMSc/vWaJ7uVCBLg/w1307-h868-no/BoiseIdahoFall2014-2.jpg
+cover_image: https://farm4.staticflickr.com/3187/2462550872_8e5c02c0bb_o_d.jpg
 # Your favicon located in folder `source/_images/` (development) or in `source/assets/images/` (production)
 favicon:
 # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
