--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,9 @@ theme: tranquilpeak
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:runlevelsix/runlevelsix.github.io.git
+  branch: master
 
 # Feed
 feed:
