--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: MST
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://runlevelsix.com
+url: http://runlevelsix.github.io
 root: /
 permalink: :year/:month/:title/
 permalink_defaults:
